Changed packages and namespace from RYS to RewriteYourStrings.

--- a/test/RewriteYourStringsTest.fsproj
+++ b/test/RewriteYourStringsTest.fsproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\RYS.fsproj" />
+    <ProjectReference Include="..\src\RewriteYourStrings.fsproj" />
   </ItemGroup>
 
 </Project>
