--- a/src/RewriteYourStrings.fsproj
+++ b/src/RewriteYourStrings.fsproj
@@ -1,4 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="Current" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>RewriteYourStrings</AssemblyName>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Include="RewriteYourStrings\RewriteMonad.fs" />
+  </ItemGroup>
+
 </Project>
