Added some initial queies on the string including Levenshtein distance with another string.

--- a/src/RewriteYourStrings.fsproj
+++ b/src/RewriteYourStrings.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="RewriteYourStrings\Internal\Levenshtein.fs" />
     <Compile Include="RewriteYourStrings\RewriteMonad.fs" />
   </ItemGroup>
 
