Putting transformations (rewrites) and queries into separate modules. This is a step towards making a comprehensible API.

--- a/src/RewriteYourStrings.fsproj
+++ b/src/RewriteYourStrings.fsproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Include="RewriteYourStrings\Internal\Levenshtein.fs" />
     <Compile Include="RewriteYourStrings\RewriteMonad.fs" />
+    <Compile Include="RewriteYourStrings\Query.fs" />
+    <Compile Include="RewriteYourStrings\Transform.fs" />
   </ItemGroup>
 
 </Project>
