Changes to make a package build.

--- a/src/RewriteYourStrings.fsproj
+++ b/src/RewriteYourStrings.fsproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>RewriteYourStrings</AssemblyName>
+    <Version>1.0.0-alpha-20190628</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
